apps/blue-green/deployment/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: helloworld
spec:
  to:
    kind: Service
    name: helloworld
    weight: 100
